# Outreach

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: TODO.md  account_tracker.md  architecture.md  discovery_strategy.md  linkedin_browser_playbook.md  relationship_engine.md  startup_source_shortlist.md  system_overview.md
scripts/: build_fall_sprint_list.py  launch_outreach_browser.sh  run_daily_supervised_e2e.sh
tests/: conftest.py  test_account_tracker.py  test_ai_messaging.py  test_cadence.py  test_cli.py  test_communication_lab.py  test_company_enrichment.py  test_company_news.py  test_company_watchlist.py  test_discovery.py  test_email_delivery.py  test_email_finder.py  test_institution_discovery.py  test_intelligence_commands.py  test_linkedin_affinity.py  test_linkedin_invite_worker.py  test_linkedin_service.py  test_linkedin_signals.py  test_mapped_invites.py  test_messaging_roles.py  test_notes.py  test_outcome_learning.py  test_peoplegrove_curation.py  test_peoplegrove_locators.py  test_recruiting_intelligence.py  test_relationship_leads.py  test_relationship_leads_cli.py  test_resume_jobs_bridge.py  test_reviewed_linkedin.py  test_role_surface_monitor.py  test_scoring.py  test_shared_discovery.py  test_story_fit_targets.py  test_style_profile.py  test_style_profile_learning.py  test_tracking.py
workspace/: HUMAN_REVIEW_QUEUE.md  INVITE_NOTES_20260716.csv  communication_style_profile.yml  company_overrides.csv  contacts.csv  fall_sprint_briefs_raw.json  fall_sprint_company_briefs.md  fall_sprint_seed.csv  fall_sprint_targets.csv  (+15 more)
(+55 files in other folders)
