[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outreach-engine"
version = "0.1.0"
description = "LinkedIn outreach automation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.72.0",
  "notion-client>=2.3.0",
  "playwright>=1.54.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
